add_library(SIMD_Optimized_Kernels
Kernels/Add_Force_Differential/Add_Force_Differential.cpp
Kernels/Add_Force_First_Order/Add_Force_First_Order.cpp
Kernels/Augmented_Rotated_Stress_Derivative/Augmented_Rotated_Stress_Derivative.cpp
Kernels/Block_DeDuplicate/Block_DeDuplicate.cpp
Kernels/Block_Duplicate/Block_Duplicate.cpp
Kernels/Collision_Force_Differential/Collision_Force_Differential.cpp
Kernels/Collision_Forces/Collision_Forces.cpp
Kernels/Compute_Cell_Matrix/Compute_Cell_Matrix.cpp
Kernels/Compute_Diagonal_Contribution/Compute_Diagonal_Contribution.cpp
Kernels/Constraint_Differential_Forces/Constraint_Differential_Forces.cpp
Kernels/Deviatoric_Piola_Kirchhoff_Stress_Tensor/Deviatoric_Piola_Kirchhoff_Stress_Tensor.cpp
Kernels/Expanded_Collision_Force_Differential/Expanded_Collision_Force_Differential.cpp
Kernels/Expanded_Collision_Forces/Expanded_Collision_Forces.cpp
Kernels/Force_Stabilization/Force_Stabilization.cpp
Kernels/Grid_Compact/Grid_Compact.cpp
Kernels/Grid_UnCompact/Grid_UnCompact.cpp
Kernels/Hybrid_Grid_Compact/Hybrid_Grid_Compact.cpp
Kernels/Hybrid_Grid_Compact/Hybrid_Grid_Compact_Reference.cpp
Kernels/Hybrid_Grid_UnCompact/Hybrid_Grid_UnCompact.cpp
Kernels/Hybrid_Grid_UnCompact/Hybrid_Grid_UnCompact_Reference.cpp
Kernels/Isotropic_Stress_Derivative/Isotropic_Stress_Derivative.cpp
Kernels/MaskedMath/MaskedMath.cpp
Kernels/Matrix_Times_Transpose/Matrix_Times_Transpose.cpp
Kernels/Matrix_Transpose_Times/Matrix_Transpose_Times.cpp
Kernels/Muscle_Differential/Muscle_Differential.cpp
Kernels/Muscle_Differential_Forces/Muscle_Differential_Forces.cpp
Kernels/Muscle_Forces/Muscle_Forces.cpp
Kernels/Muscle_Tension/Muscle_Tension.cpp
Kernels/Muscle_Update_Position_Based_State/Muscle_Update_Position_Based_State.cpp
Kernels/Muscle_Update_Position_Based_State_Blocked/Muscle_Update_Position_Based_State_Blocked.cpp
Kernels/Penalty_Measure_Gradient/Penalty_Measure_Gradient.cpp
Kernels/Piola_Kirchhoff_Stress_Tensor/Piola_Kirchhoff_Stress_Tensor.cpp
Kernels/Pressure_Force/Pressure_Force.cpp
Kernels/Pressure_Force_Differential/Pressure_Force_Differential.cpp
Kernels/RSD_Positive_Definite_Part/RSD_Positive_Definite_Part.cpp
Kernels/Rotated_Stress_Derivative/Rotated_Stress_Derivative.cpp
Kernels/Rotated_Stress_Derivative_Contraction/Rotated_Stress_Derivative_Contraction.cpp
Kernels/Singular_Value_Decomposition/Singular_Value_Decomposition.cpp
Kernels/Stress_Tensor_Differential/Stress_Tensor_Differential.cpp
Kernels/Symmetric_Definite_Projection/Symmetric_Definite_Projection.cpp
Kernels/Unweighted_Accumulation/Unweighted_Accumulation.cpp
Kernels/Unweighted_Gradient/Unweighted_Gradient.cpp
Kernels/Update_Position_Based_State/Update_Position_Based_State.cpp
Kernels/Update_Position_Based_State_Blocked/Update_Position_Based_State_Blocked.cpp
Kernels/Volume_Preservation_Deviation/Volume_Preservation_Deviation.cpp
Kernels/Weighted_Accumulation/Weighted_Accumulation.cpp
Kernels/Weighted_Gradient/Weighted_Gradient.cpp
)

target_include_directories (SIMD_Optimized_Kernels PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Common/)
